Bug 283163 - Online quote does not work during account creation
Summary: Online quote does not work during account creation
Status: RESOLVED FIXED
Alias: None
Product: kmymoney
Classification: Applications
Component: general (other bugs)
Version First Reported In: SVN
Platform: openSUSE Linux
: NOR normal
Target Milestone: ---
Assignee: KMyMoney Devel Mailing List
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2011-10-02 08:18 UTC by Thomas Baumgart
Modified: 2011-10-02 12:13 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Thomas Baumgart 2011-10-02 08:18:13 UTC
Version:           SVN trunk (using KDE 4.6.0) 
OS:                Linux

When creating an account in a foreign currency, pressing the 'Online quote' button yields the error message 'Security list empty'.

Reproducible: Didn't try

Steps to Reproduce:
See above

Actual Results:  
See above.

Expected Results:  
Online quote should be fetched if available.
Comment 1 Thomas Baumgart 2011-10-02 08:21:22 UTC
SVN commit 1256831 by tbaumgart:

Allow online price update during account creation

Needs to be backported to stable branch

BUG: 283163

 M  +3 -2      kequitypriceupdatedlg.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1256831
Comment 2 Cristian Oneț 2011-10-02 12:13:52 UTC
SVN commit 1256845 by conet:

Allow online price update during account creation

Backported to stable branch.

BUG: 283163



 M  +3 -2      kequitypriceupdatedlg.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1256845