Allow online price update during account creation

Backported to stable branch.

BUG: 283163


svn path=/branches/stable/extragear-kde4/office/kmymoney/; revision=1256845